<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Photos</string>
    <string name="connecting">Connecting</string>
    <string name="select_server_menu">select Server</string>
    <string name="client_name">Clientname</string>
    <string name="start_download_menu_title">Start Download</string>
    <string name="select_server_title">Select Server</string>
    <string name="progress_indication_title">Downloading Photos</string>
    <string name="update_indication_title">Refreshing new downloaded Photos</string>
    <string name="wait_for_server_message">Please wait …</string>
    <string name="preferences_menu_title">Preferences</string>
    <string name="create_folder_parent_title">Parent folder</string>
    <string name="create_folder_album_title">New album</string>
    <string name="create_folder_album_hint">Neewiller 09</string>
    <string name="create_folder_execute_title">Create Folder</string>
    <string name="create_folder_date_title">begin date</string>
    <string name="create_folder_error_no_folder">Please select a folder</string>
    <string name="create_folder_error_no_abum_name">Please input a album name</string>
    <string name="app_synchronization_title">Sync</string>
    <string name="app_create_album_title">Create Album</string>
</resources>
